support java8 in test